# osl

./: .gitignore  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  license  release_notes.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: osl-cicd-actions.yml
doc/source/: Makefile  api.rst  api.rst.jinja2  conf.py  documentation.rst  faq.rst  index.rst  install.rst  sg_execution_times.rst
envs/: README.md  bmrc.yml  hbaws-no-display.yml  hbaws-vnc.yml  hbaws.yml  hbaws42-vnc.yml  headless-server.yml  linux-full-with-spyder.yml  linux-full.yml  linux-with-spyder.yml  linux.yml  m1-mac.yml  m1_mac.yml  m2-mac.yml  mac-full.yml  mac-with-spyder.yml  mac.yml  osl-dev.yml  osl-workshop-23.yml  osl.yml  windows.yml
examples/: README.md  beamformer_comparison_paper.py  extract_rhino_files.py  fix_smri_files.py  notts_ukmp_preproc_and_parcellate.py  self_paced_fingertap.py  spectrum_analysis_walkthrough.py
examples/camcan/: 1_preprocess.py  2_coregister.py  2_source_reconstruct.py  3_sign_flip.py  3_source_reconstruct.py  4_sign_flip.py  5_prepare.py  5_save_npy.py  README.md  calc_glm.py  coregister.py  coregistration.py  evaluate_preproc.py  preprocess.py  sign_flip.py  source_reconstruct.py
examples/ctf/: README.md
examples/elekta/: 1_maxfilter.py  2_preprocess.py  3_coregister.py  4_source_reconstruct.py  5_sign_flip.py  README.md
examples/lemon/: 1_preprocess.py  2_source_reconstruct.py  3_sign_flip.py  README.md  preprocess.py  sign_flip.py  source_reconstruct.py
osl/: README.md  __init__.py  preprocessing.py
(+329 files in other folders)
