[flake8]
max-line-length=120
extend-ignore=E741,E265,E402

[options]
packages =
    osl
    osl.glm
    osl.maxfilter
    osl.preprocessing
    osl.report
    osl.source_recon
    osl.source_recon.rhino
    osl.source_recon.parcellation
    osl.utils

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
